<resources>
    <string name="app_name">sos_app</string>
    <string name="sos">SOS</string>
    <string name="save_contact">Save Contact</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="sos_emergency_app">SOS Emergency App</string>
    <string name="record_audio">Record Audio</string>
    <string name="settings">SETTINGS</string>
    <string name="send_sos">SEND SOS</string>
    <string name="status_ready">Status: Ready</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="current_location">Current Location: %1$s</string>

</resources>